Small alignement issue fixed.

--- a/style.css
+++ b/style.css
@@ -250,6 +250,7 @@ section a {
 
     .portrait-item {
         width: 100%;
+        margin: 0;
     }
 
     #scrollTopBtn {
